@@ -64,7 +64,7 @@ public class Spell_ShockingGrasp extends Spell
 	@Override
 	public long flags()
 	{
-		return Ability.FLAG_AIRBASED;
+		return Ability.FLAG_ELECTRICBASED;
 	}
 
 	@Override
